# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "51.250.22.74:8080",
+    "host": "51.250.18.28:8080",
     "basePath": "/api",
     "paths": {
         "/auth": {
@@ -133,14 +133,14 @@
                     },
                     {
                         "type": "integer",
-                        "description": "id order",
+                        "description": "id photographer",
                         "name": "id_photographer",
                         "in": "query",
                         "required": true
                     },
                     {
                         "type": "boolean",
-                        "description": "id order",
+                        "description": "accept",
                         "name": "is_accept",
                         "in": "query",
                         "required": true
@@ -157,6 +157,45 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/apiserver.successResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/client/all-orders": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "client api"
+                ],
+                "summary": "User orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.structResponseGetOrdersForPhotographer"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.errorResponse"
                         }
                     },
                     "500": {
@@ -190,13 +229,6 @@
                         "type": "string",
                         "description": "id order",
                         "name": "id_order",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "id user",
-                        "name": "id_user",
                         "in": "query",
                         "required": true
                     },
@@ -324,6 +356,48 @@
                 }
             }
         },
+        "/client/get-original": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "client api"
+                ],
+                "summary": "Get original photos",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id order",
+                        "name": "id_order",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.structResponseFinishOrder"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/client/get-preview": {
             "get": {
                 "security": [
@@ -340,7 +414,7 @@
                 "tags": [
                     "client api"
                 ],
-                "summary": "Get preview",
+                "summary": "Get preview photos",
                 "parameters": [
                     {
                         "type": "integer",
@@ -431,6 +505,15 @@
                     "client api"
                 ],
                 "summary": "Get list all photographers",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -469,13 +552,6 @@
                         "type": "integer",
                         "description": "id order",
                         "name": "id_order",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "id user",
-                        "name": "id_user",
                         "in": "query",
                         "required": true
                     },
@@ -542,13 +618,6 @@
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "id client",
-                        "name": "id_client",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "description": "review",
                         "name": "review",
                         "in": "body",
@@ -597,20 +666,50 @@
                     "api"
                 ],
                 "summary": "User money data",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id user",
-                        "name": "id_user",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/apiserver.structResponseGetMoney"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ph/all-orders": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "photographer api"
+                ],
+                "summary": "Photographer orders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/apiserver.structResponseGetOrdersForPhotographer"
                         }
                     },
                     "400": {
@@ -697,7 +796,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/apiserver.structResponseGetOrder"
+                            "$ref": "#/definitions/apiserver.structBaseOrderInfoForPhotographer"
                         }
                     },
                     "500": {
@@ -731,13 +830,6 @@
                         "type": "string",
                         "description": "id order",
                         "name": "id_order",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "id photographer",
-                        "name": "id_user",
                         "in": "query",
                         "required": true
                     },
@@ -796,13 +888,6 @@
                         "type": "integer",
                         "description": "id order",
                         "name": "id_order",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "id photographer",
-                        "name": "id_photographer",
                         "in": "query",
                         "required": true
                     }
@@ -990,6 +1075,17 @@
                 }
             }
         },
+        "apiserver.structBaseOrderInfoForPhotographer": {
+            "type": "object",
+            "properties": {
+                "order_data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiserver.structOrderForPhotographer"
+                    }
+                }
+            }
+        },
         "apiserver.structBaseUserInfo": {
             "type": "object",
             "properties": {
@@ -1031,7 +1127,7 @@
                 }
             }
         },
-        "apiserver.structOrder": {
+        "apiserver.structOrderForPhotographer": {
             "type": "object",
             "properties": {
                 "client": {
@@ -1149,13 +1245,25 @@
                 }
             }
         },
-        "apiserver.structResponseGetOrder": {
+        "apiserver.structResponseGetOrdersForPhotographer": {
             "type": "object",
             "properties": {
-                "order_data": {
+                "active": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/apiserver.structOrder"
+                        "$ref": "#/definitions/apiserver.structOrderForPhotographer"
+                    }
+                },
+                "backlog": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiserver.structOrderForPhotographer"
+                    }
+                },
+                "finished": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/apiserver.structOrderForPhotographer"
                     }
                 }
             }
@@ -1247,9 +1355,6 @@
         "model.OrderData": {
             "type": "object",
             "properties": {
-                "client_id": {
-                    "type": "integer"
-                },
                 "comment": {
                     "type": "string"
                 },
